--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <meta charset="utf-8">
     <title>Prueba para Git</title>
+    <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
     <head>
 
     </head>
     <body>
-        
+        <h1>Proyecto empresarial</h1>
     </body>
 </html>
