--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Proyecto prueba Github</h1>
         <p1>Párrafo Agregado</p1>
+        <p2>Segundo Párrafo Agregadp</p2>
     </body>
 </html>
